# MS-Word-Parser

./: .gitignore  LICENSE  Parse DOCx With Class.py  Parse DOCx.py  README.md  parse-docx.spec  pyproject.toml  requirements.txt  version.txt
@eaDir/: pyproject.toml@SynoEAStream
Resources/Useful Links/: ECMA-376 - Ecma International.url  Office Open XML - Wikipedia.url  Open XML Formats and file name extensions - Microsoft Support.url  XML for the uninitiated - Microsoft Support.url  ZIP (file format) - Wikipedia.url
archive/: Parse DOCx.py  requirements.txt
archive/functions/: Display_Output.py  ms_word_menu.py
classes/: ms_word.py
functions/: Display_Output.py  excel.py  extracttags.py  metadata.py  ms_word_menu.py  rsids.py  xml.py
ms_word_parser/: parse_docx.py  tips.py
